<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ownotes</string>
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Enter Title</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="alarm">Alarm</string>
    <string name="stop_watcher">Stop Watch</string>
    <string name="world_clock">World Clock</string>
    <string name="timer">Timer</string>
    <string name="calender">Calender</string>
    <string name="medicine">Medicine</string>
    <string name="notes">Notes</string>
    <string name="display_stopwatch">00:00:0</string>
    <string name="btn_start">Start</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_lap">Lap</string>
    <string name="menu_add">Add Zone</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Remove</string>
    <string name="menu_about">About</string>
    <string name="title_timezone_add">Add Time Zone</string>
    <string name="title_timezone_edit">Edit Time Zone</string>
    <string name="timezone_pick_zone">Pick a time zone</string>
    <string name="timezone_pick_name">Custom name</string>
    <string name="timezone_save">Save</string>
    <string name="timezone_cancel">Cancel</string>
    <string name="timezone_search_filter">Type to narrow search...</string>
    <string name="error_must_pick_zone_name">Please select a timezone and custom name</string>
    <string name="about_title">AndroidOpenSourceApps.org</string>
    <string name="about_message">This app is free software. Please consider a donation, visit <a href="http://www.androidopensourceapps.org">AndroidOpenSourceApps.org</a> to find more details.</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="no_event">No event</string>
    <string name="calendar_permission_required">Calendar access is required to manage your events</string>
    <string name="all_day">All day</string>
    <string name="grant_access">Grant access</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="event_time">Event time</string>
    <string name="event_calendar">Event calendar</string>
    <string name="warning_empty_title">Event title is required</string>
    <string name="choose_calendar">Choose a calendar</string>
    <string name="create_event">Create new event</string>
    <string name="edit_event">Edit event</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this event?</string>
    <string name="confirm_discard_changes">Discard changes?</string>
    <string name="warning_missing_calendar">Please choose a calendar</string>
    <string name="end_time">Ends\n%s</string>
    <string name="default_calendar_name">Local Calendar</string>
    <string name="event_created">Event created.</string>
    <string name="event_updated">Event updated.</string>
    <string name="event_deleted">Event deleted.</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="fahrenheit">%1$.1f\u00b0F</string>
    <string name="show_weather">Show weather</string>
    <string name="updating_weather" tools:ignore="TypographyEllipsis">Updating weather information...</string>
    <string name="location_permission_required">Updating weather requires location access</string>
    <string name="week_start">Week start</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="calendars">Calendars</string>
    <string name="error_location">Unable to determine your location</string>
    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="title_treatment_deadline">Treatment deadline</string>
    <string name="title_continuous_use">Continuous use</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Scuccessfully</string>
    <string name="reminder_message">It\'s Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_today">Today</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tomorrow">Tomorrow</string>
    <string name="title_activity_add">Add Alarm!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_tv_message">Opened by Alarm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pill_name">Please insert pill name</string>
    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_edit">edit</string>
    <string name="title_edit_notes_activity">Note</string>
    <string name="no_notes_text">Press \'+\' to add new note</string>
    <string name="note_title">Title</string>
    <string name="note_body">Note</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string-array name="colourNames">
        <item>Blue</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>White</item>
    </string-array>
    <string-array name="fontSizeNames">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="action_search">Search</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_backup">Backup notes</string>
    <string name="action_restore">Restore notes</string>
    <string name="action_note_colour">Note colour</string>
    <string name="action_delete_selected_number">Selected</string>
    <string name="action_font_size">Note font size</string>
    <string name="action_hide_body">Hide note body in list</string>
    <string name="action_show_body">Show note body in list</string>
    <string name="dialog_delete">Selected notes will be deleted!</string>
    <string name="dialog_note_colour">Change note colour</string>
    <string name="dialog_save_changes">Save changes?</string>
    <string name="dialog_font_size">Change note font size</string>
    <string name="dialog_rate_title">Rate app</string>
    <string name="dialog_rate_message">Open app in Play Store?
        (Thank you for rating! We really appreciate it!)</string>
    <string name="dialog_check_backup_if_sure">Are you sure you want to backup current notes?</string>
    <string name="dialog_backup_created_title">Backup successful</string>
    <string name="dialog_backup_created">Backup created in</string>
    <string name="dialog_check_restore_if_sure">Are you sure you want to restore backup notes?
        (Cannot be undone)</string>
    <string name="dialog_restore_failed_title">No backup found</string>
    <string name="dialog_restore_failed">To restore notes, the backup file
        has to be in \'External/Swiftnotes/swiftnotes_backup.json\'</string>
    <string name="new_note_content_description">New note</string>
    <string name="favourite_content_description">Favourite</string>
    <string name="toast_deleted">Delete successful</string>
    <string name="toast_new_note">Note created</string>
    <string name="toast_note_saved">Note saved</string>
    <string name="toast_empty_note_discarded">Empty note discarded</string>
    <string name="toast_edittext_cannot_be_empty">Title cannot be empty</string>
    <string name="toast_note_body_hidden">Note body will now be hidden in notes list</string>
    <string name="toast_note_body_showing">Note body will now be shown in notes list</string>
    <string name="toast_backup_failed">Backup unsuccessful</string>
    <string name="toast_backup_no_notes">No notes to backup</string>
    <string name="toast_restore_successful">Notes restored</string>
    <string name="toast_restore_unsuccessful">Restore unsuccessful</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="action_cancel">Cancel</string>
    <string name="goto_today">"Today"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="search">"Search"</string>
    <string name="accessibility_remove_reminder">Remove reminder</string>
    <string name="accessibility_reminder_time">Reminder time</string>
    <string name="accessibility_reminder_type">Reminder type</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_sort_by_gmt_offset">Sort by time</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="time_picker_cancel">Cancel</string>
    <string name="time_picker_set">OK</string>
</resources>