<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:alphabeticShortcut="f"
        android:icon="@drawable/ic_menu_search"
        android:imeOptions="actionSearch"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_today"
        android:alphabeticShortcut="t"
        android:icon="@drawable/today_icon"
        android:title="@string/goto_today"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_preferences" />
</menu>
