<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_search"
        android:title="@android:string/search_go"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView"
        android:imeOptions="actionSearch"
        android:orderInCategory="1" />
    <item android:id="@+id/menu_item_sort"
        android:title="@string/menu_item_sort_by_gmt_offset"
        android:showAsAction="never" />
    <item android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_item_help"
        android:title="@string/menu_item_help"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"/>
</menu>
