<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="@dimen/edit_reminder_min_size"
    android:orientation="horizontal"
    android:paddingTop="1dip">

    <Spinner
        android:id="@+id/reminder_minutes_value"
        style="@style/TextAppearance.EditEvent_Value"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dip"
        android:layout_weight="1"
        android:contentDescription="@string/accessibility_reminder_time"
        android:entries="@array/reminder_minutes_labels"
        android:gravity="top|left" />

    <Spinner
        android:id="@+id/reminder_method_value"
        style="@style/TextAppearance.EditEvent_Value"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dip"
        android:layout_weight="1"
        android:contentDescription="@string/accessibility_reminder_type"
        android:entries="@array/reminder_methods_labels"
        android:gravity="top|left" />

    <ImageButton
        android:id="@+id/reminder_remove"
        style="@style/MinusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/accessibility_remove_reminder"
        android:gravity="center_vertical"

        />
</LinearLayout>
