<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/labelBox"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dip"
        android:layout_marginStart="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginEnd="8dip"
        android:inputType="textCapSentences"
        android:padding="8dp"
        android:selectAllOnFocus="true"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:layout_width="match_parent"/>

    <View
        android:id="@+id/hairline"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_below="@id/labelBox"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/hairline">
        <Button
            android:id="@+id/cancelButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/dialog_button"
            android:background="@drawable/item_background"
            android:text="@string/time_picker_cancel"
            />
        <View
            android:layout_height="match_parent"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:layout_width="1dip"
            android:background="@color/primary_dark"/>
        <Button
            android:id="@+id/setButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/dialog_button"
            android:background="@drawable/item_background"
            android:text="@string/time_picker_set"/>
    </LinearLayout>
</RelativeLayout>
