<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_cal">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/pill_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pill Name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginTop="8dp"/>

            <EditText android:id="@+id/pill_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pill_name_title"
                android:maxLength="12"
                android:ellipsize="end"
                android:singleLine="true"
                android:gravity="center"
                android:backgroundTint="#fff"
                android:hint="@string/pill_name"
                android:textColor="#fff"
                android:textColorHint="#fff"/>

            <TextView android:id="@+id/time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pill_name"
                android:text="Reminder Time"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginTop="8dp"/>

            <TextView android:id="@+id/reminder_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time_title"
                android:textSize="30sp"
                android:gravity="center"
                android:clickable="true"
                android:layout_marginTop="8dp"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/choose_ringtone"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_below="@id/reminder_time"
                style="@style/body"
                android:text="Select Tone"
                android:background="@drawable/item_background"
                android:clickable="true"
                android:textColor="@color/clock_white"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:drawableLeft="@drawable/ic_ringtone"
                android:drawableStart="@drawable/ic_ringtone"
                android:drawablePadding="2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/vibrate_onoff"
                android:layout_toStartOf="@+id/vibrate_onoff"
                />

            <TextView android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choose_ringtone"
                android:text="Schedule"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginTop="8dp"/>

            <CheckBox android:id="@+id/every_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Every day"
                android:layout_marginTop="15dp"
                android:onClick="onCheckboxClicked"
                android:layout_below="@+id/schedule"
                android:buttonTint="#fff"
                android:textColor="#fff"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/checkbox_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/every_day"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Sunday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"
                    />

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Monday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Tuesday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_wednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Wednesday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Thursday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Friday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

                <com.alarm.technothumb.alarmapplication.medicinee.CustomCheckBox
                    android:id="@+id/checkbox_saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Saturday"
                    android:button="@null"
                    android:onClick="onCheckboxClicked"
                    android:padding="1dp"
                    android:gravity="center"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/btn_cancel_alarm"
            android:text="@string/str_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"/>



        <Button
            android:id="@+id/btn_set_alarm"
            android:text="@string/str_btn_set_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:background="@drawable/button"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</RelativeLayout>



