<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/back_cal">

    <TextView
        android:id="@+id/stopwatch_view"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/display_stopwatch"
        android:textColor="#fff"/>

    <ScrollView
        android:id="@+id/lapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/stopwatch_view"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/btn_start"
            style="?android:borderlessButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:layout_marginRight="5dp"
            android:text="@string/btn_start"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_lap"
            style="?android:borderlessButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/btn_lap"
            android:textColor="@color/primary_dark"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
